syntax = "proto3";

package admin.pb;

message GroupLogHash  {
    string group_id = 1;
    string head_id = 2;
    string tail_id = 3;
    int32  length = 4;
    bytes  hash  = 5;
}

message GroupLogIDPack {
    int32  leftNum = 1;
    string logId = 2;
}

message GroupLogNum {
    int32 num = 1;
}